--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,16 @@ ul li a{
     font-weight: bolder;
     font-size: large;
 }
+
+#products{
+    display: flex;
+    justify-content: space-around;
+}
+
+.product{
+    border: 1px solid black ;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+}
