--- a/css/blog_day5.css
+++ b/css/blog_day5.css
@@ -33,7 +33,6 @@ nav .menu{
 .menu ul li a{
     text-decoration: none;
     color: antiquewhite;
-    /* padding: 20px; */
     margin: 20px;
     font-size: 25px;
 }
@@ -41,6 +40,7 @@ nav .menu{
     background-color: beige;
     color: black;
     cursor: pointer;
+
 }
 
 .backcolor::before{
@@ -62,4 +62,6 @@ nav .menu{
     position: absolute;
     top: 50%;
     left: 50%;
+    text-align: center;
+    padding: 10px;
   }
